email template fix and print button aligned to place also fixed some minor things in enrolment page

--- a/backend/web/css/student/style.css
+++ b/backend/web/css/student/style.css
@@ -13,7 +13,3 @@
   size: auto;
   margin: 3mm;
 }
-#print {
-	margin-top: -75px;
-    margin-left: 750px;
-}
